# krautlogconverter

./: Cargo.toml  LICENSE  README.md
src/: logdata.rs  main.rs
