[package]
name = "krautloganalyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.7"

chrono = { version = "0.4.19", features = ["serde"]}
serde_json = "1.0.75"
serde_with = { version = "1.11.0", features = ["chrono"] }
serde = {version = "1.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.12.0"
stringreader = "0.1.1"
